--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,22 +1,17 @@
-= form_for @product do |f|
+=simple_form_for @product do |f|
   - if @product.errors.any?
     #error_explanation
       %h2= "#{pluralize(@product.errors.count, "error")} prohibited this product from being saved:"
       %ul
         - @product.errors.full_messages.each do |msg|
           %li= msg
-
   .field
-    = f.label :title
-    = f.text_field :title
+    = f.input :title
   .field
-    = f.label :description
-    = f.text_area :description
+    = f.input :description
   .field
-    = f.label :image_url
-    = f.text_field :image_url
+    = f.input :image_url
   .field
-    = f.label :price
-    = f.text_field :price
+    = f.input :price
   .actions
-    = f.submit 'Save'
+    = f.submit
