[SCAFFOLD PRODUCT] Adds seeds database

--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,7 +1,11 @@
-%h1 Editing product
+%center
+	%h1 Editing product
 
-= render 'form'
+.row
+	.col-md-10.col-md-offset-1
+		= render 'form'
 
-= link_to 'Show', @product
-\|
-= link_to 'Back', products_path
+		= link_to 'Show', @product
+		|
+		= link_to 'Back', products_path
+		
