--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New product
+%center
+	%h1 New product
 
-= render 'form'
-
-= link_to 'Back', products_path
+.row
+	.col-md-10.col-md-offset-1
+		= render 'form'
+		= link_to 'Back', products_path
