--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,17 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/*Header*/
+.container-fluid {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	.navbar-header {
+		.center {
+			font-size: 25px;
+			width: 100%;
+			text-align: center;
+			position: absolute;
+		}
+	}
+}
