--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,11 +2,13 @@
 %html
     %head
         %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-        %title Depot
+        %title Pragprog Books Online Store
         = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
         = javascript_include_tag 'application', 'data-turbolinks-track' => true
         = csrf_meta_tags
     %body
+        = render 'layouts/header'
         - flash.each do |name, msg|
             = content_tag :div, msg, class: "alert alert-#{name}"
-        = yield
+        .container
+            = yield
