--- a/app/views/stores/index.html.haml
+++ b/app/views/stores/index.html.haml
@@ -10,4 +10,5 @@
 			%h3= link_to product.title, product
 			= product.description
 			.price_line
-				.price= product.price
+				%span.price= product.price
+				= button_to 'Add to Cart', line_items_path(product_id: product.id), class: 'btn btn-default'
