--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,12 @@
         = render 'layouts/header'
         - flash.each do |name, msg|
             = content_tag :div, msg, class: "alert alert-#{name}"
-        .container
-            = yield
+        .row
+            .col-md-3.border
+                .container-fluid
+                    %h4.border Your Cart
+                    %table.table
+                        = render @cart
+            .col-md-9
+                .container-fluid
+                    = yield
