--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -1,18 +1,7 @@
 %h2 Your Cart
 
-%table.table.table-striped
-	- @cart.line_items.each do |item|
-		%tr
-			%td #{item.quantity} &times;
-			%td= item.product.title
-			%td.item_price= number_to_currency(item.total_price)
-		%tr.total_line
-			%td{colspan: 2} 
-				%h4 Total
-			%td.total_cell
-				%h4= number_to_currency(@cart.total_price)
+= render(@cart)
 
-= button_to "Empty cart", @cart, method: :delete, confimr: 'Are you sure?', class: 'btn btn-default'
+
 = link_to 'Edit', edit_cart_path(@cart), class: 'btn btn-default'
-\|
 = link_to 'Back', carts_path, class: 'btn btn-default'
