--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,5 @@
 %nav.navbar.navbar-default
-	.container-fluid
+	.container-fluid.header
 		.navbar-header
 			%button.navbar-toggle.collapsed{type: 'button', 'data-toggle' => 'collapse', 'data-target' => '#bs-example-navbar-collapse-1'}
 				%span.sr-only Toggle navigation
