--- a/app/views/line_items/_line_item.html.haml
+++ b/app/views/line_items/_line_item.html.haml
@@ -1,3 +1,4 @@
 %tr
-	%td{colspan: 2} #{line_item.quantity} &times; #{line_item.product.title}
+	%td{colspan: 2} #{line_item.quantity} &times; 
+	%td= line_item.product.title
 	%td.item_price= number_to_currency(line_item.total_price)
