--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
                 .container-fluid
                     %h4.border Your Cart
                     = render @cart
+                = button_to "Log Out", session_path("#{session[:user_id]}"), method: :delete, class: 'btn btn-default'
             .col-md-9
                 .container-fluid
                     = yield
