--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -9,6 +9,8 @@
       %th Image url
       %th Price
       %th
+      %th
+      %th
 
   %tbody
     - @products.each do |product|
@@ -17,12 +19,9 @@
         %td= truncate(product.description, length: 75)
         %td= product.image_url
         %td= product.price
-        %td
-          = link_to 'Show', product
-          %br/
-          = link_to 'Edit', edit_product_path(product)
-          %br/
-          = link_to 'Destroy', product, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= link_to 'Show', product
+        %td= link_to 'Edit', edit_product_path(product)
+        %td= link_to 'Destroy', product, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
